--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3072,5 +3072,8 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\2.Gold\1311.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\0.Bronze\2711.cpp">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
