--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3081,5 +3081,11 @@
     <ClCompile Include="Baekjoon\97.Rank\2.Gold\20057.cpp">
       <Filter>Baekjoon\97.Rank\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\6.Bruteforce\1.Silver\2503.cpp">
+      <Filter>Baekjoon\6.Bruteforce\1.Silver</Filter>
+    </ClCompile>
+    <ClCompile Include="Baekjoon\9.TopologicalSorting\2.Gold\2637.cpp">
+      <Filter>Baekjoon\9.TopologicalSorting\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
