--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3153,5 +3153,11 @@
     <ClCompile Include="Baekjoon\12.Floyd-warshall\2.Gold\1507.cpp">
       <Filter>Baekjoon\12.Floyd-warshall\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\1.DynamicProgramming\1.Silver\15990.cpp">
+      <Filter>Baekjoon\1.DynamicProgramming\1.Silver</Filter>
+    </ClCompile>
+    <ClCompile Include="Baekjoon\1.DynamicProgramming\2.Gold\2718.cpp">
+      <Filter>Baekjoon\1.DynamicProgramming\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
