--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3180,5 +3180,8 @@
     <ClCompile Include="Baekjoon\1.DynamicProgramming\1.Silver\15988.cpp">
       <Filter>Baekjoon\1.DynamicProgramming\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\10.Dijkstra\2.Gold\16118.cpp">
+      <Filter>Baekjoon\10.Dijkstra\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
