--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3189,5 +3189,11 @@
     <ClCompile Include="Baekjoon\4.BFS\2.Gold\20058.cpp">
       <Filter>Baekjoon\4.BFS\2.Gold</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\2.Greedy\1.Silver\1417.cpp">
+      <Filter>Baekjoon\2.Greedy\1.Silver</Filter>
+    </ClCompile>
+    <ClCompile Include="Baekjoon\16.Combinatorics\2.Gold\16134.cpp">
+      <Filter>Baekjoon\16.Combinatorics\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
