--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3211,4 +3211,9 @@
       <Filter>Baekjoon\16.Combinatorics\0.Bronze</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
+      <Filter>Baekjoon\97.Rank\0.Bronze</Filter>
+    </None>
+  </ItemGroup>
 </Project>
